feat: archivos sprint -1 y sprint -2 para análisis SonarCloud