@@ -4,12 +4,15 @@ import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
+
 
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.client.RestClient;
 
 import java.util.logging.Logger;
+
+import co.edu.unbosque.mundial_2026.dto.PartidoCapacidadDTO;
 import co.edu.unbosque.mundial_2026.dto.response.EquipoMundialDTO;
 import co.edu.unbosque.mundial_2026.dto.response.EquipoMundialResponseDTO;
 import co.edu.unbosque.mundial_2026.dto.response.JugadorDTO;
@@ -22,26 +25,21 @@ import co.edu.unbosque.mundial_2026.dto.response.StandingResponseDTO;
 import co.edu.unbosque.mundial_2026.entity.Partido;
 import co.edu.unbosque.mundial_2026.entity.Usuario;
 import co.edu.unbosque.mundial_2026.exception.PartidoNotFoundException;
-import co.edu.unbosque.mundial_2026.exception.UsuarioNotFoundException;
-import co.edu.unbosque.mundial_2026.repository.CiudadRepository;
-import co.edu.unbosque.mundial_2026.repository.EstadioRepository;
 import co.edu.unbosque.mundial_2026.repository.PartidoRepository;
 import co.edu.unbosque.mundial_2026.repository.SeleccionRepository;
-import co.edu.unbosque.mundial_2026.repository.UsuarioRepository;
+
 
 @Service
 public class PartidoServiceImpl implements PartidoService {
 
     private static final int LIGA_MUNDIAL = 1;
     private static final int TEMPORADA_MUNDIAL = 2026;
-    private static final String BASE_FIXTURES = "/fixtures?league=" + LIGA_MUNDIAL + "&season=" + TEMPORADA_MUNDIAL;
-
+   private static final String SEASON_PARAM = "&season=";
+private static final String BASE_FIXTURES = "/fixtures?league=" + LIGA_MUNDIAL + SEASON_PARAM + TEMPORADA_MUNDIAL;
     private final RestClient footballClient;
     private final PartidoRepository partidoRepository;
-    private final UsuarioRepository usuarioRepository;
+    private final UsuarioService usuarioService;
     private final SeleccionRepository seleccionRepository;
-    private final EstadioRepository estadioRepository;
-    private final CiudadRepository ciudadRepository;
     private static final java.util.Map<String, String> ESTADIO_CIUDAD = new java.util.HashMap<>();
 
 static {
@@ -62,16 +60,14 @@ static {
 }
     private static final Logger logger = Logger.getLogger(PartidoServiceImpl.class.getName());
 
+   
     public PartidoServiceImpl(RestClient footballClient, PartidoRepository partidoRepository,
-            UsuarioRepository usuarioRepository, SeleccionRepository seleccionRepository,
-            EstadioRepository estadioRepository, CiudadRepository ciudadRepository) {
-        this.footballClient = footballClient;
-        this.partidoRepository = partidoRepository;
-        this.usuarioRepository = usuarioRepository;
-        this.seleccionRepository = seleccionRepository;
-        this.estadioRepository = estadioRepository;
-        this.ciudadRepository = ciudadRepository;
-    }
+        UsuarioService usuarioService, SeleccionRepository seleccionRepository) {
+    this.footballClient = footballClient;
+    this.partidoRepository = partidoRepository;
+    this.usuarioService = usuarioService;
+    this.seleccionRepository = seleccionRepository;
+}
 
     @Override
     public List<PartidoDTO> obtenerPartidos() {
@@ -106,7 +102,7 @@ static {
     @Override
     public List<List<PosicionDTO>> obtenerStandings() {
         final StandingResponseDTO response = footballClient.get()
-                .uri("/standings?league=" + LIGA_MUNDIAL + "&season=" + TEMPORADA_MUNDIAL)
+                .uri("/standings?league=" + LIGA_MUNDIAL + SEASON_PARAM + TEMPORADA_MUNDIAL)
                 .retrieve()
                 .body(StandingResponseDTO.class);
         return response.getRespuesta().get(0).getTablas().getTablas();
@@ -115,7 +111,7 @@ static {
     @Override
 public List<EquipoMundialDTO> obtenerSelecciones() {
     final EquipoMundialResponseDTO response = footballClient.get()
-            .uri("/teams?league=" + LIGA_MUNDIAL + "&season=" + TEMPORADA_MUNDIAL)
+            .uri("/teams?league=" + LIGA_MUNDIAL + SEASON_PARAM + TEMPORADA_MUNDIAL)
             .retrieve()
             .body(EquipoMundialResponseDTO.class);
     return response.getEquipos();
@@ -142,7 +138,7 @@ public List<EquipoMundialDTO> obtenerSelecciones() {
     @Override
     public List<PartidoDTO> obtenerPartidosEnVivo() {
         final PartidoResponseDTO response = footballClient.get()
-                .uri("/fixtures?live=all&league=" + LIGA_MUNDIAL + "&season=" + TEMPORADA_MUNDIAL)
+                .uri("/fixtures?live=all&league=" + LIGA_MUNDIAL + SEASON_PARAM + TEMPORADA_MUNDIAL)
                 .retrieve()
                 .body(PartidoResponseDTO.class);
         return response.getPartidos();
@@ -172,7 +168,7 @@ public List<EquipoMundialDTO> obtenerSelecciones() {
             partido.setGolesLocal(dto.getGoles().getLocal());
             partido.setGolesVisitante(dto.getGoles().getVisitante());
             return partido;
-        }).collect(Collectors.toList());
+        }).toList();
 
         partidoRepository.saveAll(partidos);
         return partidos.size();
@@ -181,13 +177,13 @@ public List<EquipoMundialDTO> obtenerSelecciones() {
     @Override
     public int sincronizarPorFechaYLiga(String fecha, int liga, int temporada) {
         final PartidoResponseDTO response = footballClient.get()
-                .uri("/fixtures?league=" + liga + "&season=" + temporada + "&date=" + fecha)
+                .uri("/fixtures?league=" + liga + SEASON_PARAM + temporada + "&date=" + fecha)
                 .retrieve()
                 .body(PartidoResponseDTO.class);
 
         final List<Partido> partidos = response.getPartidos().stream()
-                .map(dto -> procesarPartido(dto))
-                .collect(Collectors.toList());
+                .map(this::procesarPartido)
+                .toList();
 
         partidoRepository.saveAll(partidos);
         return partidos.size();
@@ -208,8 +204,7 @@ public List<EquipoMundialDTO> obtenerSelecciones() {
 
  @Override
 public List<PartidoDTO> obtenerPartidosPorSeleccionesFav(String correo) {
-    final Usuario usuario = usuarioRepository.findByCorreoUsuario(correo)
-            .orElseThrow(() -> new UsuarioNotFoundException("Usuario no encontrado"));
+final Usuario usuario = usuarioService.obtenerEntidadPorCorreo(correo);
     final List<PartidoDTO> listaPartidos = new ArrayList<>();
     for (int i = 0; i < usuario.getSeleccionesU().size(); i++) {
         List<PartidoDTO> partidos = obtenerPartidosPorEquipo(usuario.getSeleccionesU().get(i).getId());
@@ -220,8 +215,7 @@ public List<PartidoDTO> obtenerPartidosPorSeleccionesFav(String correo) {
 
     @Override
     public List<PartidoDTO> obtenerPartidosPorEstadiosFav(final String correo) {
-        final Usuario usuario = usuarioRepository.findByCorreoUsuario(correo)
-                .orElseThrow(() -> new UsuarioNotFoundException("Usuario no encontrado"));
+        final Usuario usuario = usuarioService.obtenerEntidadPorCorreo(correo);
         final List<PartidoDTO> listaPartidos = new ArrayList<>();
         final PartidoResponseDTO response = footballClient.get()
                 .uri(BASE_FIXTURES)
@@ -234,15 +228,14 @@ public List<PartidoDTO> obtenerPartidosPorSeleccionesFav(String correo) {
                         final String nombre = p.getInformacion().getEstadio().getNombre();
                         return nombre != null && nombre.equalsIgnoreCase(nombreEstadio);
                     })
-                    .forEach(p -> listaPartidos.add(p));
+                 .forEach(listaPartidos::add);
         }
         return listaPartidos;
     }
 
   @Override
 public List<PartidoDTO> obtenerPartidosPorCiudadesFav(final String correo) {
-    final Usuario usuario = usuarioRepository.findByCorreoUsuario(correo)
-            .orElseThrow(() -> new UsuarioNotFoundException("Usuario no encontrado"));
+final Usuario usuario = usuarioService.obtenerEntidadPorCorreo(correo);
     final List<PartidoDTO> listaPartidos = new ArrayList<>();
     final PartidoResponseDTO response = footballClient.get()
             .uri(BASE_FIXTURES)
@@ -283,7 +276,7 @@ public List<PartidoDTO> obtenerPartidosPorCiudadesFav(final String correo) {
                     final String ciudadDelEstadio = ESTADIO_CIUDAD.get(p.getEstadio());
                     return ciudadDelEstadio != null && ciudadDelEstadio.equalsIgnoreCase(nombre);
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private Partido procesarPartido(final PartidoDTO dto) {
@@ -309,4 +302,43 @@ public List<PreferenciaDTO> obtenerCatalogoSelecciones() {
         .map(s -> new PreferenciaDTO(s.getId(), s.getNombre()))
         .toList();
 }
+@Override
+@Transactional(readOnly = true)
+public Partido obtenerPartidoEntidadPorId(final Long partidoId) {
+    return partidoRepository.findById(partidoId)
+            .orElseThrow(() -> new PartidoNotFoundException(
+                    "Partido no encontrado en base de datos con id: " + partidoId));
+}
+@Override
+@Transactional
+public void actualizarCapacidad(final Long partidoId, final int cantidad) {
+    final Partido partido = partidoRepository.findById(partidoId)
+            .orElseThrow(() -> new PartidoNotFoundException(
+                    "Partido no encontrado con id: " + partidoId));
+    partido.setCapacidadDisponible(partido.getCapacidadDisponible() + cantidad);
+    partidoRepository.save(partido);
+}
+@Override
+@Transactional(readOnly = true)
+public List<PartidoCapacidadDTO> listarPartidosConCapacidad() {
+    final List<Partido> partidos = partidoRepository.findAll();
+    final List<PartidoCapacidadDTO> dtos = new ArrayList<>();
+    for (final Partido p : partidos) {
+        final PartidoCapacidadDTO dto = new PartidoCapacidadDTO();
+        dto.setId(p.getId());
+        dto.setLocal(p.getSeleccionLocal());
+        dto.setVisitante(p.getSeleccionVisitante());
+        dto.setEstadio(p.getEstadio());
+        dto.setCiudad(ESTADIO_CIUDAD.getOrDefault(p.getEstadio(), "Por confirmar")); 
+        dto.setCapacidadDisponible(p.getCapacidadDisponible() != null ? p.getCapacidadDisponible() : 60000);
+        dtos.add(dto);
+    }
+    return dtos;
+}
+@Override
+@Transactional(readOnly = true)
+public List<Partido> listarDesdeBD() {
+    return partidoRepository.findAll();
+}
+
 }
